@@ -1,4 +1,7 @@
 release 1.18
+- Fixed issue 1537
+  http://java.net/jira/browse/JERSEY-1537
+  JSONConfiguration.natural() does not convert List<> as JSON array anymore
 - Fixed issue 2036
   http://java.net/jira/browse/JERSEY-2036
   UriBuilder does not replace query parameters correctly on non-ascii parameter
